Working with lists, tables and inline CSS(Web Development)

--- a/list.html
+++ b/list.html
@@ -19,9 +19,15 @@
 	</ol>
 	<h3>Soft Drinks</h3>
 	<ul type="circles">
-		<li>Cococala</li>
-		<li>Juice</li>
-		<li>Pepsi</li>
+		<li>Cococala<br>
+			<img src=""><br>
+		</li>
+		<li>Juice<br>
+			<img src="">
+		</li>
+		<li>Pepsi<br>
+			<img src="">
+		</li>
 	</ul>
 
 </body>
