Introducing PHP and working with external CSS

--- a/form.html
+++ b/form.html
@@ -47,6 +47,6 @@
 		<input type="radio" name="gender"><label>Male</label><br>
 		<label>Password</label><br>
 		<input id="editText" type="password" placeholder="**********" required=""/><br><br>
-		<input id="submit" type="submit" value="SignIn"/>
+		<input id="submit" type="submit" value="SignIn"/><br>
 </body>
 </html>
